Fix: phone field country container z-index issue

--- a/resources/assets/public/scss/public/components.scss
+++ b/resources/assets/public/scss/public/components.scss
@@ -701,6 +701,9 @@
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
   }
+  .iti--container, .iti__country-list {
+    z-index: 9999;
+  }
   .ff_gdpr_field {
     margin-right: 5px;
   }
